<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.feijia.circlecalculator.CircleCalcActivity" >
	<item
        android:id="@+id/prev_ans"
        android:orderInCategory="100"
        android:title="@string/ans"
        app:showAsAction="always"/>
    <item
        android:id="@+id/prev_equation"
        android:orderInCategory="100"
        android:title="@string/prev"
        app:showAsAction="always"/>
    <item
        android:id="@+id/next_equation"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="always"/>
    <item
        android:id="@+id/recent_history"
        android:orderInCategory="100"
        android:title="@string/recent_history"
        app:showAsAction="ifRoom"/>
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
     <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="100"
        android:title="@string/action_tutorial"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_ratestring"
        app:showAsAction="never"/>
</menu>
